#24 - Added tests cases for sql injection (not yet finished) [skip ci]